[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["ZheyangXu <jishengxzy@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.1"
numpy = "^1.25.0"
gymnasium = "^0.28.1"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
