[project]
name = "playground"
version = "0.1.0"
description = "a playground of reinforcement learning."
authors = [
    {name = "ZheyangXu",email = "jishengxzy@hotmail.com"},
]
dependencies = [
    "torch>=2.0.1",
    "numpy>=1.25.2",
    "gymnasium>=0.29.0",
    "matplotlib>=3.7.2",
    "tqdm>=4.66.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
